minihdfs cluster tests working for all but one test